--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+body{
+    background-color: white;
+}
 .logo{
-    width: 70px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     display: flex;
     cursor: pointer;
 }
@@ -8,10 +11,12 @@
     width: 100%;
     height: 110%;
     margin-top: 10px;
+    margin-left: 10px;
 
 }
 .logo a{
     text-decoration: none;
+    
 }
 #navbar{
     display: flex;
@@ -27,17 +32,189 @@
 }
 #navbar ul li a{
     text-decoration: none;
+    background: radial-gradient(circle at 10% 20%, rgb(255, 246, 236) 39.5%, rgba(100, 46, 122, 0.23) 100.2%);
 }
 #navbar ul li a:hover{
     color: brown;
 }
-.Info h1{
-    margin-top: 0px;
-    font-size: larger;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.landing-page{
+    width: auto;
+    height: 1000px;
+}
+.landing-page h1{
+    font-size: 40px
+}
+h1{
+    margin-top: 50px;
+    text-align: center;
+}
+h1 span{
+    color: rgb(157, 83, 172);
 }
 .Info {
-    margin-top: 30px;
-    margin-right: 30px;
+    margin-top: 60px;
+    width: auto;
+    height: 800px;
+    display: block;
+}
+.Info p{
+    background: radial-gradient(circle at 10% 20%, rgb(255, 246, 236) 39.5%, rgba(100, 46, 122, 0.23) 100.2%);
+    margin: auto;
+    width: 50%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    font-size: 20px;
+}
+.Info button{
+    background-color: radial-gradient(circle at 10% 20%, rgb(99, 97, 100) 39.5%, rgba(44, 5, 59, 0.23) 100.2%);
+    border: none;
+    border-radius: 10px;
+    color: rgb(171, 51, 182);
+    padding: 20px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
+    margin: auto;
+    display: block;
+    margin-top: 50px;
+}
+.team{
+    margin-top: 60px;
+}
+.team #know-us{
+    width: 70%;
+    text-align: center;
+    font-size: 20px;
+    margin: auto;
+    margin-top: 20px;
+}
+.team .team-members{
+    height: 500px;
+    margin: 10px;
+    padding-right: 20px;
     display: flex;
+    justify-content: space-between;
+}
+.team .team-members #member1{
+    width: 600px;
+    height: 360px;
+}
+.team .team-members #member1 img{
+    width: 100%;
+    height: 100%;
+}
+.team .team-members #member2{
+    width: 500px;
+    height: 360px;
+}
+.team .team-members #member2 img{
+    width: 100%;
+    height: 100%;
+}
+.About #us{
+    display: flex;
+    justify-content: space-evenly;
+}
+.About #us #travel{
+    width: 800px;
+    height: 700px;
+    margin-left: 30px;
+}
+.About #us #travel img{
+    padding-top: 30px;
+    width: 100%;
+    height: 100%;
+}
+.About #us #travel-text{
+    width: 600px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    padding-block: 30px;
+    padding-left: 20px;
+    background: radial-gradient(circle at 10% 20%, rgb(255, 246, 236) 39.5%, rgba(100, 46, 122, 0.23) 100.2%);
+}
+#cs{
+    background: radial-gradient(circle at 10% 20%, rgb(255, 246, 236) 39.5%, rgba(100, 46, 122, 0.23) 100.2%);
+}
+.Contact #content{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
+}
+.Contact #us{
+    margin-left: 50px;
+}
+.Contact #form form label{
+    width: 100px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.Contact #form form input{
+    padding-bottom: 20px;
+}
+button{
+    padding: 20px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
+    margin: auto;
+    display: block;
+    margin-top: 50px;
+}
+#socials p{
+    text-align: center;
+    font-size: 20px;
+}
+#socials {
+    font-size: 30px;
+    cursor: pointer;
+    text-align: center;
+}
+.newsletter p{
+    font-size: 20px;
+    margin-left: 100px;
+}
+#letter{
+    display: flex;
+    justify-content: space-evenly;
+}
+#subscription{
+    width: 200px;
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+#img{
+    width: 600px;
+    height: 400px;
+}
+#img img{
+    width: 100%;
+    height: 100%;
+}  
+footer{
+    background: radial-gradient(circle at 10% 20%, rgb(255, 246, 236) 39.5%, rgba(62, 21, 78, 0.23) 100.2%);
+
+}
+footer #foot{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
+} 
+footer #foot .links ul li{
+    list-style: none; 
+    display: grid;
+}
+footer p{
+    font-size: 20px;
+    text-align: center;
+}
+footer #foot .links ul li a{
+    text-decoration: none;
+}
+footer #foot .res ul li{
+    list-style: none;
 }
